out/base/api-deployment.yaml
#! api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
    namespace: data-pipeline-for-jellyfin-rec-sys
    labels:
        com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
        com.docker.compose.service: api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
            com.docker.compose.service: api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
                com.docker.compose.service: api
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: api
                  image: data-pipeline-for-jellyfin-rec-sys-api
                  imagePullPolicy: IfNotPresent
                  args:
                    - gunicorn
                    - -w
                    - 2
                    - -b
                    - 0.0.0.0:8080
                    - scripts.app:create_app()
                  ports:
                    - name: api-8080
                      containerPort: 8080
                  volumeMounts:
                    - name: app
                      mountPath: /app
            volumes:
                - name: app
                  hostPath:
                    path: /home/cc/Data-Pipeline-for-Jellyfin-Rec-Sys/api
