out/base/bootstraper-deployment.yaml
#! bootstraper-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: bootstraper
    namespace: data-pipeline-for-jellyfin-rec-sys
    labels:
        com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
        com.docker.compose.service: bootstraper
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
            com.docker.compose.service: bootstraper
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
                com.docker.compose.service: bootstraper
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: bootstraper
                  image: data-pipeline-for-jellyfin-rec-sys-bootstraper
                  imagePullPolicy: IfNotPresent
                  args:
                    - tail
                    - -f
                    - /dev/null
                  workingDir: /app
                  volumeMounts:
                    - name: app
                      mountPath: /app
                    - name: data-embedding
                      mountPath: /data/embedding
                    - name: mnt-block-embedding
                      mountPath: /mnt/block/embedding
            volumes:
                - name: app
                  hostPath:
                    path: /home/cc/Data-Pipeline-for-Jellyfin-Rec-Sys/bootstraper
                - name: data-embedding
                  hostPath:
                    path: /mnt/object/minio_data/embedding
                - name: mnt-block-embedding
                  hostPath:
                    path: /mnt/block/embedding/
