out/base/minio-init-deployment.yaml
#! minio-init-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: minio-init
    namespace: data-pipeline-for-jellyfin-rec-sys
    labels:
        com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
        com.docker.compose.service: minio-init
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
            com.docker.compose.service: minio-init
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
                com.docker.compose.service: minio-init
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: minio-init
                  image: minio/mc
                  imagePullPolicy: IfNotPresent
                  command:
                    - /bin/sh
                    - -c
                    - mc alias set myminio http://minio:9000 minioadmin minioadmin123; mc mb --ignore-existing myminio/warehouse; mc mb --ignore-existing myminio/raw; mc mb --ignore-existing myminio/cleaned; mc mb --ignore-existing myminio/artifacts; mc mb --ignore-existing myminio/embedding; exit 0;
