out/base/simulator-deployment.yaml
#! simulator-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: simulator
    namespace: data-pipeline-for-jellyfin-rec-sys
    labels:
        com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
        com.docker.compose.service: simulator
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
            com.docker.compose.service: simulator
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
                com.docker.compose.service: simulator
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: simulator
                  image: data-pipeline-for-jellyfin-rec-sys-simulator
                  imagePullPolicy: IfNotPresent
                  args:
                    - tail
                    - -f
                    - /dev/null
                  volumeMounts:
                    - name: app
                      mountPath: /app
            volumes:
                - name: app
                  hostPath:
                    path: /home/cc/Data-Pipeline-for-Jellyfin-Rec-Sys/simulator
