out/base/api-expose.yaml
#! api-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api
    namespace: data-pipeline-for-jellyfin-rec-sys
    labels:
        com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
        com.docker.compose.service: api
spec:
    selector:
        com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
        com.docker.compose.service: api
    ports:
        - name: api-8080
          port: 8080
          targetPort: api-8080
