out/base/api-service.yaml
#! api-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-published
    namespace: data-pipeline-for-jellyfin-rec-sys
    labels:
        com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
        com.docker.compose.service: api
spec:
    selector:
        com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
        com.docker.compose.service: api
    ports:
        - name: api-18081
          port: 18081
          protocol: TCP
          targetPort: api-8080

# check if there is at least one published port
