out/base/minio-expose.yaml
#! minio-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: minio
    namespace: data-pipeline-for-jellyfin-rec-sys
    labels:
        com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
        com.docker.compose.service: minio
spec:
    selector:
        com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
        com.docker.compose.service: minio
    ports:
        - name: minio-9000
          port: 9000
          targetPort: minio-9000
        - name: minio-9001
          port: 9001
          targetPort: minio-9001
