out/base/online_service-service.yaml
#! online_service-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: online-service-published
    namespace: data-pipeline-for-jellyfin-rec-sys
    labels:
        com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
        com.docker.compose.service: online_service
spec:
    selector:
        com.docker.compose.project: data-pipeline-for-jellyfin-rec-sys
        com.docker.compose.service: online_service
    ports:
        - name: online-se-18080
          port: 18080
          protocol: TCP
          targetPort: online-se-18080

# check if there is at least one published port
